# sefn-utils

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
examples/: InputValidationExample.cpp  TrieExample.cpp  input_validation_example.cpp  trie_example.cpp
include/: InputUtils.hpp  Sefn.hpp  Trie.hpp
include/Sefn/: InputUtils.hpp  Trie.hpp
tests/: InputUtilsTests.cpp  TestUtils.hpp  TrieTests.cpp
